--- a/src/main/resources/static/fragments/navbar.html
+++ b/src/main/resources/static/fragments/navbar.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
   <script src="https://cdn.tailwindcss.com"></script>
   <title>Financial Literacy</title>
 </head>
 <body>
-<nav class="bg-gray-800">
+
+<!-- Navbar -->
+<nav class="bg-white dark:bg-gray-800" id="navbar" th:fragments="nav">
   <div class="mx-auto max-w-7xl px-2 sm:px-6 lg:px-8">
     <div class="relative flex h-16 items-center justify-between">
       <div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
@@ -14,22 +16,18 @@
       <div class="flex flex-1 items-center justify-center sm:items-stretch sm:justify-start">
         <div class="flex shrink-0 items-center">
           <img class="h-8 w-auto"
-               src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Flogos-world.net%2Fwp-content%2Fuploads%2F2023%2F03%2FFinancial-Conduct-Authority-Logo.png&f=1&nofb=1&ipt=9ad2f4df3774d5d832eae9067e42afaad4fc3e86b5880bfed90dd1a54ff032f3&ipo=images"
-               alt="Your Company">
+               src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Flogos-world.net%2Fwp-content%2Fuploads%2F2023%2F03%2FFinancial-Conduct-Authority-Logo.png&f=1&nofb=1&ipt=9ad2f4df3774d5d832eae9067e42afaad4fc3e86b5880bfed90dd1a54ff032f3&ipo=images">
         </div>
         <div class="hidden sm:ml-6 sm:block">
           <div class="flex space-x-4">
-            <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
             <a href="#" class="rounded-md bg-gray-900 px-3 py-2 text-sm font-medium text-white"
-               aria-current="page">Learn</a>
+               aria-current="page">Home</a>
+            <a href="#" class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-gray-700 hover:text-white">Learn</a>
             <a href="#"
-               class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-gray-700 hover:text-white">Explore</a>
-            <a href="#"
-               class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-gray-700 hover:text-white">Projects</a>
-            <a href="#"
-               class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-gray-700 hover:text-white">Calendar</a>
+               class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-gray-700 hover:text-white" onclick="window.location.href='/mainpage'">Blog</a>
           </div>
         </div>
+
       </div>
       <div class="absolute inset-y-0 right-0 flex items-center pr-2 sm:static sm:inset-auto sm:ml-6 sm:pr-0">
         <button type="button"
@@ -48,7 +46,8 @@
           <div>
             <button type="button"
                     class="relative flex rounded-full bg-gray-800 text-sm focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-gray-800"
-                    id="user-menu-button" aria-expanded="false" aria-haspopup="true">
+                    id="user-menu-button" aria-expanded="false" aria-haspopup="true"
+                    onclick="window.location.href='/login'">
               <span class="absolute -inset-1.5"></span>
               <span class="sr-only">Open user menu</span>
               <img class="size-8 rounded-full"
@@ -61,6 +60,7 @@
       </div>
     </div>
   </div>
+</nav>
 
 </body>
 </html>
