--- a/src/main/resources/templates/userpage.html
+++ b/src/main/resources/templates/userpage.html
@@ -188,6 +188,14 @@
     </div>
 </div>
 
+<!--Logout Button -->
+<div class="py-4 px-2 flex justify-center">
+    <button type="button"
+            class="text-red-700 hover:text-white border border-red-700 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2 dark:border-red-500 dark:text-red-500 dark:hover:text-white dark:hover:bg-red-600 dark:focus:ring-red-900 right">
+        Log Out
+    </button>
+</div>
+
 <!-- Footer -->
 <footer class="bg-white dark:bg-gray-800">
     <div class="mx-auto w-full max-w-screen-xl p-4 py-6 lg:py-8">
