--- a/src/main/resources/templates/mortgagesArticle.html
+++ b/src/main/resources/templates/mortgagesArticle.html
@@ -166,6 +166,7 @@
     Made with <i class="text-red-300 fa fa-heart"></i> By <a href="https://timelydevs.com">Timely Systems</a>
 </div>
 
+<!-- Footer -->
 <footer class="bg-white dark:bg-gray-800">
     <div class="mx-auto w-full max-w-screen-xl p-4 py-6 lg:py-8">
         <div class="md:flex md:justify-between">
