--- a/src/main/resources/templates/quizQuestion1.html
+++ b/src/main/resources/templates/quizQuestion1.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <script src="https://cdn.tailwindcss.com"></script>
-  <title>Financial Literacy</title>
+  <title>Quiz</title>
 </head>
 <body >
 
